--- a/app/pug/blocks/programs/programs-basic.pug
+++ b/app/pug/blocks/programs/programs-basic.pug
@@ -1,9 +1,9 @@
 .programs-prev
-    .programs__bg-title Basic
+    h1.programs__bg-title Basic
     .programs__img
         img(src="./img/blocks/programs/basic/preview.gif")
     .programs-prev-info
-        .programs__course-name Beginners Course
+        h2.programs__course-name Beginners Course
         ul.programs-misc-list
             li
                 span.icon.icon-certificate
@@ -17,7 +17,7 @@
 .programs-about
     ul.programs-about-list
         li
-            .programs-about__title
+            h3.programs-about__title
                 span Provenance
                     br
                     | Coffee and basic concepts:
@@ -33,7 +33,7 @@
                     li Seven steps of the coffee plantation to the consumer
                     li Breeding and hybridization of coffee tree
         li
-            .programs-about__title
+            h3.programs-about__title
                 span Coffee production technology:
             .programs-about__content
                 ul
@@ -44,7 +44,7 @@
                     li Formation of grade names.
                     li Storage of green (not fried) Coffee
         li
-            .programs-about__title
+            h3.programs-about__title
                 span Roasting technology
                     br
                     | bean. And stage
