--- a/app/pug/blocks/programs/programs-platinum.pug
+++ b/app/pug/blocks/programs/programs-platinum.pug
@@ -1,9 +1,9 @@
 .programs-prev
-    .programs__bg-title Platinum
+    h1.programs__bg-title Platinum
     .programs__img
         img(src="./img/blocks/programs/basic/preview.gif")
     .programs-prev-info
-        .programs__course-name Platinum Course
+        h2.programs__course-name Platinum Course
         ul.programs-misc-list
             li
                 span.icon.icon-certificate
