--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -1,6 +1,6 @@
-.testimonials
+section.testimonials
     .container
-        .title Testimonials
+        h1.title Testimonials
         .subtitle We have enough patience to teach you the art of coffee
         .testimonials-slider
             ul.testimonials-slider-list
@@ -8,8 +8,8 @@
                     li.testimonials-slider-item
                         .testimonials-slider__img
                             img(src="./img/blocks/testimonials/nikandrov.png")
-                        .title.title_sm Alex Nikandrov
-                        .testimonials-slider__text
+                        h2.title.title_sm Alex Nikandrov
+                        blockquote.testimonials-slider__text
                             | Our company is grateful for the delicious and freshly roasted coffee in our office every day! Our staff of more than 300
                             br
                             | people, appreciate quality and flavor of the coffee, because that would be important for our office staff were every morning
@@ -19,8 +19,8 @@
                     li.testimonials-slider-item
                         .testimonials-slider__img
                             img(src="./img/blocks/testimonials/nikandrov.png")
-                        .title.title_sm Other slide ##{n}
-                        .testimonials-slider__text
+                        h2.title.title_sm Other slide ##{n}
+                        blockquote.testimonials-slider__text
                             | Lorem ipsum dolor sit amet...
                         - n++
             .slider-nav
