--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -1,7 +1,7 @@
-.top.darkblock
+section.top.darkblock
     .top-wrap
         .top-title.top-title_sm Intensive program barista training
-        .title.top-title_lg Barista training in 
+        h1.title.top-title_lg Barista training in 
             span.accent Amsterdam
         .top-title On the basis of the company's largest coffee roasters
     //- .top__scroll
