--- a/app/pug/blocks/feedback.pug
+++ b/app/pug/blocks/feedback.pug
@@ -1,2 +1,2 @@
-.feedback
+section.feedback
     .container Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque animi, ad voluptatum quia odit provident laudantium aperiam! Tempora cum expedita pariatur doloribus molestias, eius minus officiis. Laboriosam explicabo voluptatibus consequatur?
