--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,6 +1,6 @@
-.gallery.darkblock
+section.gallery.darkblock
     .container
-        .title.gallery-title Gallery
+        h1.title.gallery-title Gallery
         .subtitle You yourself are testing the taste benefits of each method
             br
             | and select the type of cooking yourself
