--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -34,7 +34,7 @@
     text-align: center;
     letter-spacing: .1em;
     color: black;
-    margin-bottom: rem(19px);
+    margin: 0 0 rem(19px);
     &_sm {
         font-size: rem(17px);
         text-align: left;
@@ -84,18 +84,17 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        width: rem(150px);
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
-        outline: none;
+        padding: rem(50px);
         &_prev {
-            left: rem(-70px);
+            left: rem(-45px);
             background-image: svg('<line x1="2" y1="10" x2="10" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="2" y1="10" x2="10" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
         }
         &_next {
-            right: rem(-70px);
-            background-image: svg('<line x1="10" y1="10" x2="2" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="10" y1="10" x2="2" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
+            right: rem(-45px);
+            background-image: svg('<line x1="9" y1="10" x2="1" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="9" y1="10" x2="1" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
         }
     }
 }
