HTML/CSS/Gulp Css svg for titles. Title margins changed. Small fixes in Gulp tasks

--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,6 +1,7 @@
 section.gallery.darkblock
-    .container
-        h1.title.gallery-title Gallery
+    hgroup.container
+        h1.title.gallery-title-wrap
+            span.gallery-title Gallery
         .subtitle You yourself are testing the taste benefits of each method
             br
             | and select the type of cooking yourself
