--- a/app/pug/blocks/partners.pug
+++ b/app/pug/blocks/partners.pug
@@ -1,7 +1,7 @@
 section.partners
     .container
-        .title.partners-title
-            span.partners-title__decor Our partners
+        .title.partners-title-wrap
+            span.partners-title Our partners
         .partners-slider
             ul.partners-slider-list
                 each logo in ['abajour_logo','altbee_logo','dedushka_logo','gdeburger_logo','logo_baden_baden','logo_klass','abajour_logo','altbee_logo','dedushka_logo','gdeburger_logo','logo_baden_baden','logo_klass']
