--- a/app/pug/blocks/programs/programs.pug
+++ b/app/pug/blocks/programs/programs.pug
@@ -4,8 +4,8 @@ section.programs
     .programs__bg-bottom-left
     .programs__bg-bottom-right
     .container
-        .programs-header
-            h1.title
+        hgroup.programs-header
+            h1.title.programs-title-wrap
                 span.programs-title Programs
             .subtitle We share their experience and professional barista championships multiple winners
         .tabs
