--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -1,6 +1,6 @@
 section.testimonials
     .container
-        h1.title Testimonials
+        h1.title.testimonials-title Testimonials
         .subtitle We have enough patience to teach you the art of coffee
         .testimonials-slider
             ul.testimonials-slider-list
