--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -1,9 +1,10 @@
 section.top.darkblock
-    .top-wrap
-        .top-title.top-title_sm Intensive program barista training
+    hgroup.top-wrap
+        h2.top-title.top-title_sm
+            span.top-title__decor-top Intensive program barista training
         h1.title.top-title_lg Barista training in 
             span.accent Amsterdam
-        .top-title On the basis of the company's largest coffee roasters
-    //- .top__scroll
-    //-     a(href="#")
+        h2.top-title
+            span.top-title__decor-bottom On the basis of the company's largest coffee roasters
+        a(href="#").top__scroll
 .top__bg-granola
