--- a/app/sass/sprites/_generated.scss
+++ b/app/sass/sprites/_generated.scss
@@ -1,6 +1,9 @@
 .icon-arrow-black {
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 110 28'%3E    %3Cpath stroke='%23000' d='M1 14L14 1M1 14h109M1 14l13 13'/%3E%3C/svg%3E");
 }
+.icon-arrow-bottom {
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='8' viewBox='0 0 13 8'%3E    %3Cpath stroke='%23eab96a' stroke-width='2' d='M1 1l6 6M12 1L6 7'/%3E%3C/svg%3E");
+}
 .icon-gallery-title {
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.192667 13.5936' height='13.594' width='30.193'%3E    %3Cg fill='%23fefdf9'%3E        %3Cpath d='M0 2.018h21.523V0H0zM0 7.806h30.193v-2.02H0zM0 13.594h21.523v-2.018H0z'/%3E    %3C/g%3E%3C/svg%3E");
 }
@@ -12,6 +15,9 @@
 }
 .icon-slider-nav-lg {
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 110 28'%3E    %3Cpath stroke='%23fff' d='M1 14L14 1M1 14h109M1 14l13 13'/%3E%3C/svg%3E");
+}
+.icon-slider-nav-sm-right {
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='18' viewBox='0 0 10 18'%3E    %3Cpath stroke='%23485260' stroke-width='2' d='M9 10L1 2M9 9l-8 8'/%3E%3C/svg%3E");
 }
 .icon-slider-nav-sm {
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='18' viewBox='0 0 10 18'%3E    %3Cpath stroke='%23485260' stroke-width='2' d='M1 10l8-8M1 9l8 8'/%3E%3C/svg%3E");
