--- a/app/sass/blocks/partners.scss
+++ b/app/sass/blocks/partners.scss
@@ -1,39 +1,40 @@
 .partners {
     background: rgba(black, .05);
-    padding: rem(111px) 0 rem(175px);
+    padding: rem(111px) 0 rem(168px);
     &-title {
-        &:after {
-            display: block;
-            content: '';
-            height: rem(1px);
-            width: rem(222px);
-            border-bottom: rem(1px) solid black;
-            margin: 0 auto;
-            margin-top: rem(20px);
-        }
-        margin-bottom: rem(96px);
-        &__decor {
-            position: relative;
-            outline: 1px solid red;
-            &:before,
+        &-wrap {
             &:after {
-                position: absolute;
-                content: '';
                 display: block;
-                width: 50px;
-                outline: 1px solid red;
-                top: 0;
-                height: 100%;
+                content: '';
+                height: rem(1px);
+                width: rem(222px);
+                margin: rem(23px) auto 0;
+                border-bottom: rem(1px) solid black;
             }
-            &:before {
-                left: -60px;
-            }
-            &:after {
-                right: -60px;
-            }
+        }
+        position: relative;
+        &:before,
+        &:after {
+            position: absolute;
+            content: '';
+            height: 100%;
+            width: rem(32px);
+            background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.192667 13.5936' height='13.594' width='30.193'%3E    %3Cg fill='%23222'%3E        %3Cpath d='M0 2.018h21.523V0H0zM0 7.806h30.193v-2.02H0zM0 13.594h21.523v-2.018H0z'/%3E    %3C/g%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-size: rem(32px);
+            background-position: center;
+            top: 0;
+        }
+        &:before {
+            left: rem(-64px);
+            transform: scaleX(-1);
+        }
+        &:after {
+            right: rem(-64px);
         }
     }
     &-slider {
+        margin-top: rem(73px);
         position: relative;
         &-list {
             @extend %list;
