--- a/app/sass/blocks/programs.scss
+++ b/app/sass/blocks/programs.scss
@@ -6,27 +6,32 @@
     padding-top: rem(80px);
     padding-bottom: rem(140px);
     position: relative;
-    &-title {
-        &:before,
-        &:after {
-            vertical-align: bottom;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: rem(16px);
-            height: 1em;
-            width: 1em;
-            content: '';
-            display: inline-block;
-        }
-        &:before {
-            margin-right: rem(7px);
-        }
-        &:after {
-            margin-left: rem(7px);
-        }
-    }
     &-header {
         margin-bottom: rem(58px);
+    }
+    &-title {
+        &-wrap {
+            margin-bottom: rem(19px);
+        }
+        position: relative;
+        &:before,
+        &:after {
+            position: absolute;
+            content: '';
+            height: 100%;
+            width: rem(15px);
+            background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 9.7955132 9.3546171' width='9.796' height='9.355'%3E    %3Cdefs%3E        %3CclipPath id='a'%3E            %3Cpath d='M0 7.016h44.951V0H0z'/%3E        %3C/clipPath%3E    %3C/defs%3E    %3Cg clip-path='url(%23a)' transform='matrix(1.33333 0 0 -1.33333 0 9.355)'%3E        %3Cpath d='M3.942 6.85l.903-1.83a.299.299 0 0 1 .226-.164l2.018-.294a.3.3 0 0 0 .167-.51l-1.46-1.425a.302.302 0 0 1-.088-.266l.345-2.01a.3.3 0 0 0-.435-.316l-1.805.95a.3.3 0 0 1-.279 0L1.728.034a.3.3 0 0 0-.435.316l.345 2.01a.302.302 0 0 1-.087.266L.091 4.051a.3.3 0 0 0 .166.511l2.018.294a.297.297 0 0 1 .226.164l.903 1.83a.3.3 0 0 0 .538 0' fill='%23222'/%3E    %3C/g%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-size: rem(16px);
+            background-position: center;
+            top: 0;
+        }
+        &:before {
+            left: rem(-40px);
+        }
+        &:after {
+            right: rem(-40px);
+        }
     }
     &-prev {
         @extend %clearfix;
@@ -57,6 +62,7 @@
         font-size: rem(200px);
         color: #dddddd;
         position: absolute;
+        margin: 0;
         top: 0;
         right: rem(71px);
         font-family: 'RobotoBlack';
@@ -82,11 +88,16 @@
             margin-bottom: rem(3px);
         }
     }
-    &__course-name {
-        color: #2b2b2b;
-        font-size: rem(30px);
-        font-family: 'GeorgiaBold';
-        margin-bottom: rem(59px);
+    &__course {
+        &-name {
+            color: #2b2b2b;
+            font-size: rem(30px);
+            font-family: 'GeorgiaBold';
+            margin: 0 0 rem(59px);
+        }
+        &-table {
+            margin-top: rem(18px);
+        }
     }
     &__price {
         padding-left: rem(3px);
