HTML/CSS Contacts block (without bg decorations; Footer block

--- a/app/pug/blocks/feedback.pug
+++ b/app/pug/blocks/feedback.pug
@@ -1,2 +1,11 @@
 section.feedback
-    .container Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque animi, ad voluptatum quia odit provident laudantium aperiam! Tempora cum expedita pariatur doloribus molestias, eius minus officiis. Laboriosam explicabo voluptatibus consequatur?
+    .container
+        .feedback-wrap
+            h1.title.feedback-title Have questions?
+            .subtitle.feedback-subtitle Leave a request and we will contact you shortly
+            form.feedback-form
+                .feedback-form-section
+                    input(type="text" name="name" placeholder="Your name")
+                    input(type="text" name="phone" placeholder="Contact number")
+                .feedback-form-section.feedback-form-section_right
+                    button(type="submit").btn_trsp.feedback__submit Send
