--- a/app/sass/sprites/_generated.scss
+++ b/app/sass/sprites/_generated.scss
@@ -1,5 +1,5 @@
 .icon-arrow-black {
-    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 110 28'%3E    %3Cpath stroke='%23000' d='M1 14L14 1M1 14h109M1 14l13 13'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 110 28'%3E    %3Cpath stroke='%23000' d='M110 14L97 1M1 14h109M110 14L97 27'/%3E%3C/svg%3E");
 }
 .icon-arrow-bottom {
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='8' viewBox='0 0 13 8'%3E    %3Cpath stroke='%23eab96a' stroke-width='2' d='M1 1l6 6M12 1L6 7'/%3E%3C/svg%3E");
