--- a/app/sass/blocks/header.scss
+++ b/app/sass/blocks/header.scss
@@ -102,6 +102,7 @@
         padding: rem(39px) rem(10px);
         display: block;
         font-size: rem(12.5px);
+        color: white;
         &:hover {
             color: $gold;
         }
