--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -6,9 +6,11 @@ $gold: #eab96a;
 @import './style.scss';
 @import './icons.scss';
 @import './elements/tabs.scss';
-@import './layout/header.scss';
+@import './blocks/header.scss';
 @import './blocks/top.scss';
 @import './blocks/programs.scss';
 @import './blocks/gallery.scss';
 @import './blocks/testimonials.scss';
 @import './blocks/partners.scss';
+@import './blocks/feedback.scss';
+@import './blocks/footer.scss';
