--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -35,6 +35,7 @@
     letter-spacing: .1em;
     color: black;
     margin: 0 0 rem(20px);
+    line-height: 1.19;
     &_sm {
         font-size: rem(17px);
         text-align: left;
@@ -49,6 +50,7 @@
 
 .darkblock {
     color: white;
+    background-color: #222121;
     .title {
         color: white;
     }
